--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
-spring.application.name=CodeWeb-Java
+# Spring Boot application properties
+
+# OAuth 2 configuration
+spring.security.oauth2.client.registration.oauth-client.client-id=your-client-id
+spring.security.oauth2.client.registration.oauth-client.client-secret=your-client-secret
+spring.security.oauth2.client.registration.oauth-client.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.oauth-client.redirect-uri=http://localhost:8080/login/oauth2/code/oauth-client
+spring.security.oauth2.client.provider.oauth-provider.authorization-uri=https://oauth-provider.com/authorize
+spring.security.oauth2.client.provider.oauth-provider.token-uri=https://oauth-provider.com/token
+spring.security.oauth2.client.provider.oauth-provider.user-info-uri=https://oauth-provider.com/userinfo
+spring.security.oauth2.client.provider.oauth-provider.user-name-attribute=name
+
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/operation_layer
+spring.datasource.username=db-username
+spring.datasource.password=db-password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Server configuration
+server.port=8080
