--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
-spring.application.name=CodeWeb-Java
+# Spring Boot application configuration
+
+# Server port
+server.port=8080
+
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+spring.datasource.username=root
+spring.datasource.password=secret
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# OAuth 2.0 configuration
+spring.security.oauth2.client.registration.google.client-id=your-client-id
+spring.security.oauth2.client.registration.google.client-secret=your-client-secret
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.scope=openid,email
+
+# WebSocket configuration
+spring.websocket.path=/websocket
+spring.websocket.allowed-origins=*
+
+# Static resources configuration
+spring.resources.static-locations=classpath:/static/
