--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,4 @@ spring.websocket.path=/websocket
 spring.websocket.allowed-origins=*
 
 # Static resources configuration
-spring.resources.static-locations=classpath:/static/
+spring.web.resources.static-locations=classpath:/static/
