--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Spring Boot application properties
 
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+spring.datasource.url=jdbc:mysql://localhost:3306/codeweb
 spring.datasource.username=root
-spring.datasource.password=secret
+spring.datasource.password=123456
 
 # Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -16,3 +16,5 @@ spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:
 
 # Server configuration
 server.port=8080
+
+managementLayer.baseUrl=http://localhost:8081
